tests/baselines/reference/badArrayIndex.errors.txt
tests/cases/compiler/badArrayIndex.ts(1,15): error TS2552: Cannot find name 'number'. Did you mean 'Number'?
tests/cases/compiler/badArrayIndex.ts(1,22): error TS1109: Expression expected.


==== tests/cases/compiler/badArrayIndex.ts (2 errors) ====
    var results = number[];
                  ~~~~~~
!!! error TS2552: Cannot find name 'number'. Did you mean 'Number'?
                         ~
!!! error TS1109: Expression expected.